--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-dynamic/plugin-system",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Dynamic plugin system for Angular applications",
   "peerDependencies": {
     "@angular/common": ">=16.0.0",
@@ -12,27 +12,39 @@
   },
   "devDependencies": {
     "@angular/common": "^16.0.0",
-    "@angular/core": "^16.0.0",
     "@angular/compiler": "^16.0.0",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/core": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@types/node": "^20.0.0",
+    "ng-packagr": "^16.2.3",
     "rxjs": "^7.5.0",
     "typescript": "~5.0.0",
     "zone.js": "~0.13.0"
   },
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/fesm2022/angular-dynamic-plugin-system.mjs",
+  "module": "dist/fesm2022/angular-dynamic-plugin-system.mjs",
+  "es2020": "dist/fesm2020/angular-dynamic-plugin-system.mjs",
+  "esm2020": "dist/esm2020/angular-dynamic-plugin-system.mjs",
+  "fesm2020": "dist/fesm2020/angular-dynamic-plugin-system.mjs",
+  "fesm2022": "dist/fesm2022/angular-dynamic-plugin-system.mjs",
+  "typings": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "esm2020": "./dist/esm2020/angular-dynamic-plugin-system.mjs",
+      "es2020": "./dist/fesm2020/angular-dynamic-plugin-system.mjs",
+      "es2015": "./dist/fesm2015/angular-dynamic-plugin-system.mjs",
+      "node": "./dist/fesm2015/angular-dynamic-plugin-system.mjs",
+      "default": "./dist/fesm2022/angular-dynamic-plugin-system.mjs"
     }
   },
+  "sideEffects": false,
   "scripts": {
-    "build": "tsc -p tsconfig.lib.json",
+    "build": "ng-packagr -p ng-package.json",
+    "build:tsc": "tsc -p tsconfig.lib.json",
     "test": "echo \"Tests to be implemented\""
   },
   "keywords": [
