--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-dynamic/plugin-system",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "Dynamic plugin system for Angular applications",
   "peerDependencies": {
     "@angular/common": ">=16.0.0",
@@ -72,6 +72,7 @@
   "homepage": "https://github.com/bensalemahmed/angular-dynamic-plugin-system#readme",
   "files": [
     "dist",
+    "examples",
     "README.md",
     "LICENSE"
   ],
